<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_show_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        tools:text="标题" />


<RelativeLayout
    android:layout_below="@id/dialog_show_title"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/dialog_show_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        tools:text="用户名：ttx0307@163.com" />

    <TextView
        android:layout_below="@id/dialog_show_username"
        android:id="@+id/dialog_show_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@id/dialog_show_username"

        tools:text="密码：*********" />

    <TextView
        android:textColor="#2094EF"
        android:layout_marginEnd="5dp"
        android:id="@+id/dialog_show_copy_user"
        android:layout_alignParentEnd="true"
        android:text="@string/show_details_copy_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="#2094EF"
        android:layout_marginEnd="5dp"
        android:id="@+id/dialog_show_copy_pwd"
        android:layout_alignParentEnd="true"
        android:text="@string/show_details_copy_pwd"
        android:layout_alignTop="@id/dialog_show_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/root_view"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/dialog_show_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_delete"
            />

        <Button
            android:id="@+id/dialog_show_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_update"/>

    </LinearLayout>
</RelativeLayout>